css/style.css
* {
  font-family: nyt-franklin, helvetica, arial, sans-serif;
}

body {
  margin: 0;
}

header {
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.08) 0 0 5px 1px;
  border-bottom: 1px solid #e2e2e2;
  display: flex;
  width: 98%;
  justify-content: space-between;
  position: fixed;
  padding: 4px 15px 2px 15px;
}

.header-icons {
  color: #000;
  align-items: center;
  font-size: 14.25px;
}

.header-icons i {
  color: #333;
  height: 16px;
  width: 16px;
  padding: 8px 9px 9px;
}

.cosmos {
  display: inline;
}

.logo {
  height: 35px;
  width: 210px;
}

.header-right {
  display: flex;
  align-items: center;
}

.subs {
  cursor: pointer;
  white-space: nowrap;
  background-color: rgb(86, 123, 149);
  color: rgb(255, 255, 255);
  font-size: 11px;
  line-height: 11px;
  font-weight: 700;
  letter-spacing: 0.05em;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(50, 104, 145);
  border-image: initial;
  padding: 11px 12px 8px;
  margin-right: 7px;
}

/* main */
main {
  /* background-color: pink; */
  display: flex;
  justify-content: center;
}

.content {
  /* background-color: greenyellow; */
  display: flex;
  flex-direction: column;
  width: 945px;
  justify-content: center;
  align-items: center;
  margin-top: 42px;
}

.mainContentHeading {
  width: 600px;
  margin-top: 60px;
  font-size: 2.5rem;
  line-height: 3rem;
  font-style: italic;
  margin-bottom: 23px;
}

.smokingGunImage {
  width: 100%;
  height: 531px;
}

.figCaption {
  color: #666666;
  margin-top: 10px;
  width: 700px;
  font-size: 15px;
  align-self: flex-start;
}

.figCaption span {
  color: #888888;
  font-size: 13px;
}

.authorName {
  color: #000;
}

.authorInfo,
.authorInfo a {
  align-self: flex-start;
  color: #333333;
  font-size: 15px;
  font-weight: bold;
}

.authorInfo a:hover {
  text-decoration: none;
}

.articleText {
  width: 600px;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 30px;
}

.contIcons {
  display: flex;
  justify-content: space-between;
  width: 600px;
  height: 35px;
  font-size: 13px;
  align-items: center;
  color: #333333;
}

.icons i {
  font-size: 14px;
  margin-right: 12px;
  background-color: #eee;
  border: 7px #eee solid;
  border-radius: 100%;
  color: black;
}

.paragraphs p {
  font-size: 1.25rem;
  line-height: 1.875rem;
  margin-bottom: 0.9375rem;
  color: #333333;
  font-family: nyt-imperial, georgia, "times new roman", times, serif;
}
.paragraphs h1,
h2,
h3,
h4,
h5 {
  font-family: nyt-imperial, georgia, "times new roman", times, serif;
}

.theory{
  width:100%;
  height: 752px;
  border: none; 
  overflow: hidden;
}

.paragraphs a:hover {
  text-decoration: none;
}

.thanksNYtLine {
  border: 0.5px solid rgb(204, 204, 204);
  width: 15%;
}

.thanksNYT {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.thanksNYT h3 {
  margin-bottom: 0px;
  font-size: 15px;
}
.thanksNYT a {
  margin-bottom: 18.72px;
  text-decoration: none;
  color: rgb(50, 104, 145);
  font-weight: bold;
  font-size: 15px;
}

.paragraphs a {
  color: rgb(50, 104, 145);
}
.paragraphs a:hover {
  text-decoration: none;
}

.embedded {
  width: 600px;
  height: 315px;
  margin-top: 30px;
  border:none;
}

.embCaps {
  margin-top: 7px;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #666666;
}
.embCaps span {
  font-size: 13px;
  color: #888888;
  margin-left: 5px;
}

.bicep {
  width: 600px;
  height: 400px;
  margin-top: 35px;
}

.bicepCaps p {
  font-size: 16px;
  margin-bottom: 0px;
  color: #666666;
  line-height: 1.25rem;
}
.bicepCaps span {
  font-size: 13px;
  color: #888888;
}

.version {
  font-size: 11px;
  color: #666666;
  margin-bottom: 25px;
}

.version a {
  text-decoration: underline;
  cursor: pointer;
}
.version a:hover {
  text-decoration: none;
}

.moreArticles {
  display: flex;
  justify-content: space-between;
  margin-left: 73px;
  width: 89%;
}

.leftColumn,
.editors {
  width: 855px;
  border-top: 1px solid #333333;
}

.figWrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.figWrapper .figure {
  max-width: 272px;
  cursor: pointer;
}

.figWrapper p:hover,
.rightColumn p:hover {
  color: #999999;
}
.rightColumn a {
  text-decoration: none;
  color: #000;
}

.figure img {
  width: 272px;
  height: 181px;
}

.figure p:nth-child(1) {
  text-align: right;
  font-size: 10px;
  margin-top: 3px;
  color: #999999;
}

.figure p:nth-child(2) {
  font-size: 18px;
  margin-top: 3px;
  margin-bottom: 0px;
}

.figure p:nth-child(3) {
  font-size: 11px;
  color: #999999;
}

.editors,
aside h4 {
  color: #333333;
}

.rightColumn {
  width: 315px;
  border-top: 1px solid #333333;
  font-family: nyt-cheltenham, georgia, "times new roman", times, serif;
}

.rightColumn p {
  border-top: 1px solid #e2e2e2;
  padding-top: 9px;
  font-size: 1.1875rem;
  line-height: 1.4375rem;
  color: #121212;
  margin-left: 10px;
  font: bold;
  cursor: pointer;
}

.rightColumn h4 {
  margin-left: 10px;
}

.footerSection {
  display: block;
  margin-top: 30px;
  margin-left: 73px;
}

.footerBorderLine {
  display: block;
  border-bottom: 1px solid #e2e2e2;
  border-top: 2px solid #e2e2e2;
  height: 1px;
  margin-top: 0;
  width: 1200px;
  margin-left: 0px;
}
.footerLogo {
  display: block;
  margin-left: 0px;
  margin-top: 3px;
  margin-bottom: 10px;
}

.logoFooter {
  width: 184px;
  height: 33px;
}

.gridContainer {
  display: inline-grid;
  grid-template-columns: auto auto auto auto auto;
  padding: 10px;
  grid-column-gap: 110px;
  grid-row-gap: 10px;
}

.gridTitles,
aside li h5 {
  color: rgb(51, 51, 51);
  font-size: 13px;
  font-weight: 700;
  margin-bottom: 4px;
  font-family: nyt-franklin, helvetica, arial, sans-serif;
}

.gridItems {
  font-size: 13px;
  cursor: pointer;
}

.footerContainer {
  display: flex;
  flex-wrap: wrap;
}
.footerAside {
  border-left: 1px solid rgb(226, 226, 226);
  margin-top: 12px;
  margin-left: 60px;
}

.footerAside h5 {
  margin-top: 0px;
  padding-top: 0px;
}

.footerAside ul {
  margin-left: 12px;
  padding-left: 0px;
  list-style-type: none;
  margin-top: 0;
}
.footerAside li {
  display: flex;
  align-items: center;
  list-style-type: none;
}
.footerAside li strong {
  margin-left: 5px;
}

.footerAside li p {
  font-size: 11px;
  margin-top: 7px;
  margin-bottom: 7px;
  cursor: pointer;
}

.news {
  margin-top: 15px;
  margin-left: 15px;
  font-size: 11px;
}

.news li {
  margin-top: 7px;
}

.mobile {
  border-top: 1px solid rgb(226, 226, 226);
  padding-top: 15px;
  font-size: 11px;
  padding-top: 0px;
}

.mobile li {
  margin-top: 7px;
}

.footerAside a {
  text-decoration: none;
  color: #000;
  margin-top: 7px;
}

.footerAside a:hover,
.gridItems a:hover,
.footerAside li p:hover,
.info a:hover,
.singlePostEditorsPickSide a:hover{
  text-decoration: underline;
  cursor: pointer;
}

.info {
  border-top: 1px solid rgb(226, 226, 226);
  width: 1200px;
  display: flex;
  list-style-type: none;
  margin-bottom: 20px;
}

.info li {
  margin-left: 14px;
  margin-top: 10px;
}

.info a {
  color: #666;
  font-size: 11px;
  text-decoration: none;
}

.editorsPickAside{
position: absolute;
float: right;
flex: 45%;
left: 900px;
top: 1500px;
padding: 20px;
margin: 10px;
transform: scale(0.6);
}

.hrLine{
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  border-top: 1px solid #e2e2e2;
}
.postEditorsPickSide{
  
  flex-wrap: wrap-reverse;
}
.singlePostEditorsPickSide{
  display: flex;
  width: 350px;
}
.singlePostEditorsPickSide a{
  text-decoration: none;
  color:#000;
  font-size: 20px;
}
.singlePostEditorsPickSide > div{
  
  line-height: 30px;
  font-size: 20px;
}

.editorPickPostImg{
  display: block;
  margin: 20px 30px 0 0;
    width: 150px;
    object-fit: contain;
    align-self: flex-start;
}

.editorsPicsSideTitle{
margin: auto 0 auto 10px;
font-size: 20px;
}
.titleSideBar{
  font-size: 20px;
}

